Fix Yash text wrapping

--- a/style.css
+++ b/style.css
@@ -58,7 +58,9 @@
   white-space: nowrap;
   display: inline-block;
 }
-
+.subtitle {
+  white-space: nowrap;
+}
       .purple {
         color: rgb(194, 7, 194);
       
